config/gateway/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: datum-net-http-route
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: datum-net-gateway
  rules:
  - backendRefs:
    - group: discovery.k8s.io
      kind: EndpointSlice
      name: datum-net
      port: 443
      weight: 1
    filters:
      - type: URLRewrite
        urlRewrite:
          hostname: "website.staging.env.datum.net"
    matches:
    - path:
        type: PathPrefix
        value: /
    timeouts:
      backendRequest: 25s
      request: 25s
